--- a/LogViewer/Web.config
+++ b/LogViewer/Web.config
@@ -6,7 +6,7 @@
 	  <section name="LogViewerConfiguration" type="LogViewer.LogViewerConfiguration,LogViewer" />
   </configSections>
   <!-- See ~/Sample.Web.config (in Ext.Net source code sln) for documentation/sample Ext.Net web.config settings -->
-  <extnet theme="Gray" licenseKey="NTY4MDg5MjQsMSw5OTk5LTEyLTMx" scriptMode="Release" />
+  <extnet theme="Gray" scriptMode="Release" />
   <LogViewerConfiguration pageSize="50" logDbPath="d:\projects\Logs\log4net.db" defaultDbFileName="log4net.sqlite">
   </LogViewerConfiguration>
   <system.web>
